H3CIPMSJAVA-20180830/src/objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>Active_Warranty_EndDate__c</fullName>
        <label>Active Warranty EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Warranty_OfferCode__c</fullName>
        <label>Active Warranty OfferCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Warranty_PortfolioFlag__c</fullName>
        <label>Active Warranty PortfolioFlag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Warranty_StartDate__c</fullName>
        <label>Active Warranty StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Warranty_Status__c</fullName>
        <label>Active Warranty Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Warranty_TermCode__c</fullName>
        <label>Active Warranty TermCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-Account Request</fullName>
                </value>
                <value>
                    <fullName>02-SFDC Admin Support</fullName>
                </value>
                <value>
                    <fullName>03-Support Request</fullName>
                </value>
                <value>
                    <fullName>04-Legal Review</fullName>
                </value>
                <value>
                    <fullName>99-Other Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <description>Entitlement&apos;s check date</description>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <description>Entitlement&apos;s Contract Id</description>
        <label>ContractId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Response__c</fullName>
        <description>Entitlement&apos;s Coverage/Response</description>
        <label>Coverage/Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliverId__c</fullName>
        <label>DeliverId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_GESM_Type__c</fullName>
        <label>Entitlement GESM Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlement_Status__c</fullName>
        <description>Entitlement&apos;s status</description>
        <label>Entitlement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Type__c</fullName>
        <label>Entitlement Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Warning_Message__c</fullName>
        <label>Entitlement Warning Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guaranteed_DT__c</fullName>
        <label>Guaranteed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HPE_OR_EBS__c</fullName>
        <label>HPE OR EBS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HPE</fullName>
                </value>
                <value>
                    <fullName>EBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPE_SAID__c</fullName>
        <label>HPE SAID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latested_DT__c</fullName>
        <label>Latested D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocationAddress__c</fullName>
        <label>LocationAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <label>LocationId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obligation_Type__c</fullName>
        <label>Obligation Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferId__c</fullName>
        <label>OfferId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Dates__c</fullName>
        <formula>TEXT(StartDate)+ &apos;/&apos; +TEXT(EndDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>Entitlement&apos;s offer</description>
        <label>Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN__c</fullName>
        <description>Product Number</description>
        <label>Product Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_name__c</fullName>
        <label>Package name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Flag__c</fullName>
        <label>Portfolio Flag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Product Description</description>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Product Line</description>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Department__c</fullName>
        <label>Profit Center Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Entity__c</fullName>
        <label>Profit Center Entity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_SubEntity__c</fullName>
        <label>Profit Center SubEntity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Workforce__c</fullName>
        <label>Profit Center Workforce</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedSla__c</fullName>
        <label>RedSla</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Value_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Value</label>
        <referenceTo>Ref_Value__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements_Ref_Value_Id</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_DT__c</fullName>
        <label>Requested D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <label>SLA Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN__c</fullName>
        <description>Serial Number</description>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceNoteNumber__c</fullName>
        <label>ServiceNoteNumber</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Flag__c</fullName>
        <formula>TEXT(Ref_Value_Id__r.Service_Flag__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Time__c</fullName>
        <formula>Ref_Value_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <formula>TEXT(Ref_Value_Id__r.Service_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCustomerID__c</fullName>
        <label>SourceCustomerID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObligation_ID__c</fullName>
        <label>SourceObligation ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SvcProductLine__c</fullName>
        <label>SvcProductLine</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermCode__c</fullName>
        <label>TermCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuable_Customer_Name__c</fullName>
        <description>Valuable Customer Name</description>
        <label>Valuable Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuable_Customer_Type__c</fullName>
        <description>Valuable Customer Type</description>
        <label>Valuable Customer Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarrantyOfferId__c</fullName>
        <label>WarrantyOfferId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>